--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="$PAPO Token is designed to drive sustainable economic growth across Africa by providing crucial funding for startups, small businesses, and educational projects focused on Web3 technology. Join us in building a decentralized future where innovation leads to opportunity for all."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/$PAPOlogo.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>PAPO PROJECT | $PAPO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
