--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/$PAPOlogo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/papologo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="$PAPO Token is designed to drive sustainable economic growth across Africa by providing crucial funding for startups, small businesses, and educational projects focused on Web3 technology. Join us in building a decentralized future where innovation leads to opportunity for all."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/$PAPOlogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/papologo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
